se completo con test y Mock consumingApi de Pokemon

--- a/force-app/main/default/classes/ConsumingRestApi.cls
+++ b/force-app/main/default/classes/ConsumingRestApi.cls
@@ -8,20 +8,18 @@ of response
 api: https://pokeapi.co/
  */
 public with sharing class ConsumingRestApi {
-    public static PokeApi getPokemonNameByString(String nombre) {
+    public static HttpResponse getPokemonNameByString(String nombre) {
         Http http = new Http();
         HttpRequest request = new HttpRequest();
         request.setEndpoint(' https://pokeapi.co/api/v2/pokemon/'+nombre);
         request.setMethod('GET');
         HttpResponse response = http.send(request);
 
-        PokeApi aPokemon = new PokeApi();
         if(response.getStatusCode() == 200) {
-            // Deserializes the JSON string into collections of primitive data types.
-            
-           aPokemon = JSON.deserialize(response.getBody(), PokeApi.class);
-            System.debug(aPokemon.abilities+' '+aPokemon.base_experience);
+            return response;
+        }else{
+            return response;
         }
-        return aPokemon;
+       
     }
 }
