--- a/force-app/main/default/classes/AccountManageTest.cls
+++ b/force-app/main/default/classes/AccountManageTest.cls
@@ -8,28 +8,46 @@ public with sharing class AccountManageTest {
 
     @isTest
     static void AnOppotunityIsCreatedWithSuccess(){
+        Test.startTest();
         Id accountId=AccountManage.createAccount('examplename',200,'NIT','46000000');
-        System.assert(accountId!=null);
+        Test.stopTest();
 
-        Account account=[select Id,Name from Account where Id=:accountId];
-        System.assertEquals('examplename',account.Name,'The inserted account does not math with expected name');
+        Integer anAccountWithExpectedId=[
+            SELECT count() 
+            FROM Account
+            WHERE Id=:accountId
+        ];
+
+        if(anAccountWithExpectedId>0){
+            Account anAccount=[
+                SELECT Id,Name 
+                FROM Account 
+                WHERE Id=:accountId];
+
+            System.assertEquals('examplename',anAccount.Name,'The inserted account does not math with expected name');
+        }
     }
 
     @isTest
     static void shouldDeleteAccount(){
+        Test.startTest();
         Boolean result=AccountManage.deleteAccount('NIT','45554477');
         System.assert(result,'the account was not deleted');
     }
 
     @isTest
     static void shouldUpdateAccount(){
+        Test.startTest();
         Boolean result=AccountManage.updateAccount('modified', 130  ,'NIT','45554477');
+        Test.stopTest();
         System.assert(result,'the account was not updated');
     }
 
     @isTest
     static void shouldFindAnAccountByDocumentTypeIdentityDocument(){
+        Test.startTest();
         Account foundAccount=AccountManage.consultAccount('NIT','45554477');
+        Test.stopTest();
         System.assertEquals('examplename',foundAccount.Name,'Accoount found name does not match with expected name');
     }
     /*
